--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,23 +99,23 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 
 		<section class="clients reveal">
 			<div class="ctnr">
-				<h3>Our clients include...</h3>
+				<h3>Our clients include:</h3>
 
 				<div class="content">
-					<img src="/client-logos/apptio.png" alt="Apptio logo" width="152" height="80"/>
+					<img src="/client-logos/apptio.png" alt="Apptio logo" width="152" height="80" draggable="false"/>
 
-					<img src="/client-logos/outreach.png" alt="Outreach logo" width="152" height="80"/>
+					<img src="/client-logos/outreach.png" alt="Outreach logo" width="152" height="80" draggable="false"/>
 
 					<picture>
 						<source srcset="/client-logos/the-salvation-army.webp">
-						<img src="/client-logos/the-salvation-army.png" alt="The Salvation Army logo" width="72" height="80">
+						<img src="/client-logos/the-salvation-army.png" alt="The Salvation Army logo" width="72" height="80" draggable="false">
 					</picture>
 
-					<img src="/client-logos/spire-healthcare.png" alt="Spire Healthcare logo" width="152" height="80"/>
+					<img src="/client-logos/spire-healthcare.png" alt="Spire Healthcare logo" width="152" height="80" draggable="false"/>
 
 					<picture>
 						<source srcset="/client-logos/xero.webp">
-						<img src="/client-logos/xero.png" alt="Xero logo" width="80" height="80">
+						<img src="/client-logos/xero.png" alt="Xero logo" width="80" height="80" draggable="false">
 					</picture>
 				</div>
 			</div>
