--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -267,7 +267,7 @@ noscript {
 
 .panel .content {
     margin-inline: auto;
-    padding: clamp(2rem,6vw,7rem) 0 0;
+    padding-block: clamp(2rem,10vw,7rem);
     display: flex;
     flex-direction: column;
     gap: clamp(0.5rem, 2vmin, 1.2rem);
@@ -275,12 +275,12 @@ noscript {
 
 .panel .content p {
     line-height: 1.5;
-    font-size: clamp(1rem, 4vmin, 1.9rem);
+    font-size: clamp(1rem, 4vmin, 2rem);
     max-width: 66rem;
 }
 
 .panel .content p b {
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .panel .content > hr, .panel .subsets hr {
@@ -441,7 +441,7 @@ noscript {
         width: unset;
         max-width: clamp(40rem,50vw,95rem);
         flex: 1;
-        padding-block: clamp(2rem,6vw,7rem) clamp(2rem,8vw,13rem);
+        padding-block: clamp(2rem,6vw,9rem);
     }
 
     .locations.panel > .ctnr .content {
