--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -77,6 +77,10 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
         display: block;
     }
 
+    footer .logo_anchor img {
+        object-fit: contain;
+    }
+
     footer .content p {
         max-width: 38rem;
         font-weight: 300;
