--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 
 	<Header />
 	<main>
-		<section class="intro default_bg">
+		<section class="intro">
 			<div class="ctnr">
 				<div class="content reveal">
 					<h1 set:html={SITE_H1}></h1>
@@ -50,7 +50,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						<div class="ctas flex">
 							<a href="/services/" class="know_our_services" aria-label="Find out more about our services">Find out more</a>
 					
-							<a href="#contact" class="cta" aria-label="Get a quote">Get a Quote</a>
+							<a href="/contact/" class="cta" aria-label="Get a quote">Get a Quote</a>
 						</div>
 					
 						<div class="flex column">
@@ -69,11 +69,11 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					</picture>
 				</div>
 
-				<a href="#scroll" class="scroll_bt" title="Scroll for more" aria-label="Click to scroll for more"><span></span></a>
+				<a href="#why-the-clean-network" class="scroll_bt" title="Scroll for more" aria-label="Click to scroll for more"><span></span></a>
 			</div>
 		</section>
 
-		<section class="benefits">
+		<section class="benefits scroll_margin_top" id="why-the-clean-network">
 			<div class="ctnr">
 				<h3>Why The Clean Network</h3>
 
@@ -83,7 +83,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					{
 						benefits.map((benefits) => (
 							<>
-								<div class="box reveal">
+								<div class="box reveal_interval01">
 									{benefits.data.icon == "" ? "" : (<img src={benefits.data.icon} class="icon" alt={`${(benefits.data.title).replace( /(<([^>]+)>)/ig, '')} icon`}/>)}
 									
 									<h4 set:html={benefits.data.title}class="title"></h4>
@@ -94,11 +94,11 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 				</div>
 			</div>
 				
-			<a href="#contact" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
+			<a href="/contact/" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
 		</section>
 
-		<section class="clients reveal">
-			<div class="ctnr">
+		<section class="clients">
+			<div class="ctnr reveal">
 				<h3>Our clients include:</h3>
 
 				<div class="content">
@@ -121,8 +121,8 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 			</div>
 		</section>
 
-		<div class="panel_ctnr scroll_margin_top reveal" id="scroll">
-			<section class="services panel scroll_margin_top">
+		<div class="services_and_sectors scroll_margin_top reveal" id="scroll">
+			<section class="featured services scroll_margin_top">
 				<div class="ctnr">
 					<div class="content">
 						<a href="/services/" aria-label="View all services"><h3>Services</h3></a>
@@ -132,17 +132,15 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						<a href="/services/" class="cta" aria-label="View all services"><span></span> All services</a>
 					</div>
 	
-					<a href="/services/" aria-label="View all services" class="image">
-						<picture>
-							<source media="(min-width:850px)" srcset="/images/office02.webp">
-							<source srcset="/images/office02-min.webp">
-							<img src="/images/office02.jpg" alt="Office Photo" width="414" height="300">
-						</picture>
-					</a>
+					<picture>
+						<source media="(min-width:850px)" srcset="/images/office02.webp">
+						<source srcset="/images/office02-min.webp">
+						<img src="/images/office02.jpg" alt="Office Photo" width="414" height="300">
+					</picture>
 				</div>
 			</section>
 	
-			<section class="sectors panel reveal">
+			<section class="featured sectors reveal">
 				<div class="ctnr">
 					<div class="content">
 						<a href="/sectors/" aria-label="View all sectors"><h3>Sectors</h3></a>
@@ -152,34 +150,30 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						<a href="/sectors/" class="cta" aria-label="View all sectors"><span></span> All sectors</a>
 					</div>
 	
-					<a href="/sectors/" aria-label="View all sectors" class="image">
-						<picture>
-							<source media="(min-width:850px)" srcset="/images/office03.webp">
-							<source srcset="/images/office03-min.webp">
-							<img src="/images/office03.jpg" alt="Office Photo" width="415" height="300">
-						</picture>
-					</a>
+					<picture>
+						<source media="(min-width:850px)" srcset="/images/office03.webp">
+						<source srcset="/images/office03-min.webp">
+						<img src="/images/office03.jpg" alt="Office Photo" width="415" height="300">
+					</picture>
 				</div>
-			</section>
-
-			<section class="text reveal">
-				<h3>Daily Office Cleaning Services London</h3> 
-
-				<p><strong>Office cleaning</strong> is now more important than ever due to the recent pandemic. We want your employees to feel at ease about coming into the workplace.</p>
-				
-				<p><strong>Our daily office cleaning services are provided 7 days a week</strong> – and take place inside or outside of office hours as you require.</p>
-				
-				<p>You can also choose to include <b>weekly, monthly or seasonal tasks</b> from cleaning glass partitions to clearing office kitchen fridges.</p>
-				
-				<p>We also understand that no two clients are the same, <b>we tailor our office cleaning contracts accordingly.</b></p>
-				
-				<p>Whether it’s a <b>large office</b> in the heart of the City of London which requires a sizeable cleaning contract with many hours daily or a <b>smaller startup office</b> in <strong>Shoreditch</strong> which only needs attention for a few hours a week, <b>we create and deliver a cost-effective contract to suit you and your team.</b></p>
-				
-				<a href="#contact" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
 			</section>
 		</div>
 
-		<section class="locations panel reveal" id="locations">
+		<section class="text reveal">
+			<h3>Daily Office Cleaning Services London</h3> 
+
+			<p><strong>Office cleaning</strong> is now more important than ever due to the recent pandemic. We want your employees to feel at ease about coming into the workplace.</p>
+			
+			<p class="big"><strong>Our daily office cleaning services are provided 7 days a week</strong> – and take place inside or outside of office hours as you require. You can also choose to include <b>weekly</b>, <b>monthly</b> or <b>seasonal</b> tasks from cleaning glass partitions to clearing office kitchen fridges.</p>
+			
+			<p>We also understand that no two clients are the same, <b>we tailor our office cleaning contracts accordingly.</b></p>
+			
+			<p>Whether it’s a <b>large office</b> in the heart of the City of London which requires a sizeable cleaning contract with many hours daily or a <b>smaller startup office</b> in <strong>Shoreditch</strong> which only needs attention for a few hours a week, <b>we create and deliver a cost-effective contract to suit you and your team.</b></p>
+			
+			<a href="/contact/" class="main cta" aria-label="Get a free quote">Get a Free Quote</a>
+		</section>
+
+		<section class="featured locations reveal" id="locations">
 			<div class="ctnr">
 				<div class="content">
 					<h3>Location</h3>
@@ -187,15 +181,31 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 					<p set:html={LOCATIONS_SECTION_DESCRIPTION}></p>
 
 					<a href="/locations/" class="cta" aria-label="See our location"><span></span> Our Location</a>
+
+					<p>You'll find us right at the heart of the city, ready to serve the vibrant London community. Our location:</p>
+
+					<address><strong>London</strong>: {FULL_ADDRESS}</address>
+
+					<div class="map reveal">
+						<!-- <MapSwitch/> -->
+	
+						<div class="iframe_ctnr">
+							<noscript>You need to enable JavaScript on your browser to see this content.</noscript>
+	
+							<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+						</div>
+					</div>
+
+					<div class="contact_ctnr">
+						<ContactBox />
+					</div>
 				</div>
 
-				<div class="image reveal">
-					<picture>
-						<source media="(min-width:850px)" srcset="/images/customer01.webp">
-						<source srcset="/images/customer01-min.webp">
-						<img src="/images/customer01.jpg" alt="Customer Photo" width="415" height="300">
-					</picture>
-				</div>
+				<picture>
+					<source media="(min-width:850px)" srcset="/images/customer01.webp">
+					<source srcset="/images/customer01-min.webp">
+					<img src="/images/customer01.jpg" alt="Customer Photo" width="415" height="300">
+				</picture>
 			</div>
 		</section>
 
@@ -205,31 +215,32 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 				import "../styles/tiny-slider.css"
 			</script>
 
+			<!-- <h3>What our clients have been saying</h3> -->
+
 			<div class="ctnr">
-				<div class="flex center">
-					<h3>What our clients have been saying</h3>
-
-					<div class="quotes"></div>
-				</div>
-
 				<div class="slider">
 					{
 						testimonials.map((testimonials) => (
 							<>
 								<div class="box">
 									<div class="ctnr">
-										<div class="profile">
-											<img src={testimonials.data.avatar} alt={`${testimonials.data.name}'s avatar'`}/>
+										<div class="box_ctnr">
+											<sup>What our clients have been saying...</sup>
 
-											<div class="flex">
-												<p class="name">{testimonials.data.name}</p>
+											<div class="profile">
+												<img src={testimonials.data.avatar} alt={`${testimonials.data.name}'s avatar'`}/>
 
-												<p class="description">{testimonials.data.description}</p>
+												<div class="flex">
+													<p class="name">{testimonials.data.name}</p>
+
+													<p class="description">{testimonials.data.description}</p>
+												</div>
 											</div>
 										</div>
 										
 										<div class="content">
-											<p class="heading">{testimonials.data.heading}</p>
+
+											<p class="heading">"{testimonials.data.heading}"</p>
 											
 											<blockquote>
 												{testimonials.data.paragraph01 == "" ? null : (<p set:html={testimonials.data.paragraph01}></p>)}
@@ -280,36 +291,6 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 		</section>
 
 		<ContactSection />
-
-		<section class="find_us panel">
-			<div class="ctnr">
-				<div class="content reveal">
-					<h3>Find us</h3>
-
-					<p>You'll find us right at the heart of the city, ready to serve the vibrant London community. Our location:</p>
-
-					<div class="flex column">
-						<address><strong>London</strong>: {FULL_ADDRESS}</address>
-	
-						<!-- <address><strong>Birmingham</strong>: 37 Regents Place, Birmingham, B3 1UG</address> -->
-					</div>
-
-					<hr>
-
-					<ContactBox />
-				</div>
-
-				<div class="map reveal">
-					<!-- <MapSwitch/> -->
-
-					<div class="iframe_ctnr">
-						<noscript>You need to enable JavaScript on your browser to see this content.</noscript>
-
-						<iframe width="100%" height="100%" title="The Clean Network Locations map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" loading="lazy" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=EC1M%204NH+(The%20Clean%20Network)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-					</div>
-				</div>
-			</div>
-		</section>
 
 		<BlogStripe/>
 	</main>
