--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -63,7 +63,7 @@ import { SITE_KEYWORDS, SERVICES_TITLE, SERVICES_DESCRIPTION, SERVICES_KEYWORDS,
                             services.map((services) => (
                                 <>
                                 {services.data.type === "indoor" ? (
-                                <section class="panel reveal scroll_margin_top" id={(services.data.title).toLowerCase().replace(/\s+/g, '-')}>
+                                <section class="panel card reveal scroll_margin_top" id={(services.data.title).toLowerCase().replace(/\s+/g, '-')}>
                                         <div class="ctnr">
                                             <div class="content">
                                                 <h3>
