--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -4,6 +4,41 @@
     background-image: linear-gradient(-30deg,var(--light-a),transparent 62%);
 }
 
+.panel .content {
+    margin-inline: auto;
+    padding-block: clamp(2rem,10vw,7rem);
+    display: flex;
+    flex-direction: column;
+    gap: clamp(0.5rem, 2vmin, 1.2rem);
+}
+
+.panel .content p {
+    line-height: 1.5;
+    font-size: clamp(1rem, 4vmin, 1.8rem);
+    max-width: 66rem;
+}
+
+.panel .content p b {
+    font-weight: 400;
+}
+
+.panel .content > hr, .panel .subsets hr {
+    width: 2rem;
+    margin: 1rem 0;
+    height:0.1rem;
+    background-color: rgb(248 248 255 / 20%);
+}
+
+.panel .image img {
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: flex;
+    height: clamp(24rem,50vw,62rem);
+    max-height: calc(100dvh - clamp(1rem,16vmin,7.5rem));
+    font-size: 2rem;
+}
+
 main > .ctnr {
     margin-bottom: 9rem;
 }
@@ -34,5 +69,29 @@ h2 {
 @media screen and (min-width:850px) {
     .panel {
         background-image: linear-gradient(175deg,var(--light-a),transparent 15%);
+    }
+
+    .panel .image picture {
+        position: sticky;
+        top: clamp(1rem,16vmin,7.5rem);
+        display: block;
+    }
+
+    .panel .image picture, .panel .image img {
+        position: absolute;
+        inset: 0;
+        max-height: unset;
+    }
+
+    .panel .image img {
+        height: 100%;
+    }
+
+    .panel .content {
+        margin-inline: clamp(4rem, 5vw, 8rem);
+        width: unset;
+        max-width: clamp(40rem,50vw,95rem);
+        flex: 1;
+        padding-block: clamp(2rem,6vw,9rem);
     }
 }
