--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -300,8 +300,8 @@ main {}
     text-align: center;
     padding: 3rem 2.5rem 2.5rem;
     border-radius: 1.2rem;
-    background-color: var(--light-a);
-    border:0.2rem solid var(--light-a);
+    background-color: var(--light-d);
+    border:0.2rem solid var(--light-d);
     position: relative;
     box-sizing: border-box;
     transition: background-color 0.4s ease;
