--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -71,7 +71,7 @@ const posts = (await getCollection('blog')).sort(
 
 				<hr>
 
-                <div class="author">by <cite>{post.data.author}</cite></div>
+                <div class="author">{post.data.authorImage ? (<img src={post.data.authorImage} alt={`${post.data.author} profile picture`}/>) : "by"} <cite>{post.data.author}</cite></div>
     
                 <hr/>
     
