--- a/src/components/CookieConsentBanner.astro
+++ b/src/components/CookieConsentBanner.astro
@@ -33,7 +33,7 @@
 <style>
 
 .cookie-consent-banner {
-    /* display: none !important; */
+    display: none !important;
     position: fixed;
     bottom: 0;
     left: 0;
